--- a/Pages/imagenes.html
+++ b/Pages/imagenes.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <title>Nuestras Pizzas</title>
     </head>
     <body>
 
         <!--ESTRUCTURA #1 / HEADER-NAV-->
         <header>
+            <img src="../Icons/RinconItaliano.png" alt="Logo de la página">
             <nav>
                 <ul> <!--LISTA DESORDENADA-->
                     <li><a href="../index.html">Inicio</a></li>
