--- a/Pages/historia.html
+++ b/Pages/historia.html
@@ -10,6 +10,7 @@
 
         <!--ESTRUCTURA #1 / HEADER-NAV-->
         <header>
+            <img src="../Icons/RinconItaliano.png" alt="Logo de la página">
             <nav>
                 <ul> <!--LISTA DESORDENADA-->
                     <li><a href="../index.html">Inicio</a></li>
