--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--LINK A ESTILOS-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>        
         <link rel="stylesheet" href="css/style.css">
+    </head>
         <!--TÍTULO DEL DOCUMENTO-->
         <title>Rincon Italiano</title>
     </head>
@@ -31,7 +34,9 @@
                 </div>
 
             </section>
+
             
+
             <section id="articulos">
                 <h2>Estas son las mejores pizzas del restaurante</h2>
                  <!-- Tarjeta 1 -->
@@ -59,6 +64,7 @@
                 </article>
                     </section>
                 </main>
+            
 
         <!--ESTRUCTURA #3 / FOOTER-->
         <footer>
