--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -4,6 +4,8 @@
         
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Pizzería familiar con pizza gourmet y entrega a domicilio">
+        <meta name="keywords" content="pizza, pizzería, pizza gourmet, entrega a domicilio, pizza artesanal, ingredientes frescos, masa crujiente">
         <title>Contacto</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
