--- a/Pages/imagenes.html
+++ b/Pages/imagenes.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Pizzería familiar con pizza gourmet y entrega a domicilio">
+        <meta name="keywords" content="pizza, pizzería, pizza gourmet, entrega a domicilio, pizza artesanal, ingredientes frescos, masa crujiente">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../Icons/local_pizza_FILL0_wght400_GRAD0_opsz24.png" type="image/x-icon">
