--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     </head> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Pizzería familiar con pizza gourmet y entrega a domicilio">
+        <meta name="keywords" content="pizza, pizzería, pizza gourmet, entrega a domicilio, pizza artesanal, ingredientes frescos, masa crujiente">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
