--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <link rel="icon" href="Icons/local_pizza_FILL0_wght400_GRAD0_opsz24.png" type="image/x-icon">
         <link rel="shortcut icon" href="ruta/de/tu/favicon.ico" type="image/x-icon">
     </head>
