--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!--TÍTULO DEL DOCUMENTO-->
         <title>Rincon Italiano</title>
     
-<body class="bg-secondary">
+<body class="bg-dark">
 
 <!-- Inicio del menu -->
     
@@ -119,6 +119,7 @@
                 <div class="banner_titulo">
                     <h1>En Rincon Italiano, estamos emocionados de tenerte aquí para explorar un mundo de sabores irresistibles.
                     </h1>
+                    <br>
                     <h2>Estas son las mejores pizzas del momento.</h2>
                 </div>
 
@@ -136,21 +137,21 @@
                   <div class="carousel-item active">
                     <img src="Images/pizzapesto.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>PIZZA PESTO</h5>
+                      <h5 class="fs-1 text-light">PESTO</h5>
                       <p></p>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="Images/pizzapepperoni.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>PIZZA PEPPERONI</h5>
+                      <h5 class="fs-1 text-light">PEPPERONI</h5>
                       <p></p>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="Images/pizzacapricciosa.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>PIZZA CAPROCCOPSA</h5>
+                      <h5 class="fs-1 text-light">CAPROCCOPSA</h5>
                       <p></p>
                     </div>
                   </div>
